--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="title_relays">Relays</string>
     <string name="title_settings">Settings</string>
 
-    <string name="dsc_mainPump">Pump</string>
-    <string name="relay_mainPump">Pump</string>
+    <string name="Pump">Pump</string>
 
     <string name="stat_conn">Connected</string>
     <string name="stat_err">Error</string>
