--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_settings">Settings</string>
 
     <string name="Pump">Pump</string>
+    <string name="Light">Light</string>
 
     <string name="stat_conn">Connected</string>
     <string name="stat_err">Error</string>
