--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -8,9 +8,11 @@
     <string name="title_garden">Záhrada</string>
 
     <!--SENSORS-->
+    <string name="time">Čas</string>
     <string name="rasp_temp">Rasp teplota</string>
     <string name="rasp_hum">Rasp vlhkosť</string>
     <string name="rasp_dew_point">Rasp rosný bod</string>
+    <string name="rasp_vapor_pressure">Rasp tlak vodnej pary</string>
     <string name="depth">Hĺbka</string>
 
     <!--RELAYS-->
