--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Home control</string>
     <string name="title_home">Home</string>
     <string name="title_relays">Relays</string>
-    <string name="title_settings">Settings</string>
+    <string name="title_automation">Automation</string>
 
     <string name="title_garden">Garden</string>
     <string name="title_cellar">Cellar</string>
@@ -21,7 +21,11 @@
     <string name="Light">Light</string>
     <string name="Fan">Fan</string>
     <string name="EVd">EVd</string>
+    <string name="Dryer">Dryer</string>
     <string name="Boiler">Boiler</string>
+
+    <string name="Ventilation">Ventilation</string>
+
 
     <string name="relay_enabled">Enabled</string>
     <string name="relay_disabled">Disabled</string>
