--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -9,7 +9,8 @@
     <string name="title_cellar">Pivnica</string>
     <string name="title_attic">Podkrovie</string>
     <string name="title_activity_automation_config">Konfigurácia</string>
-    <string name="title_vent">Obmedzenia</string>
+    <string name="title_vent">Ventilácia</string>
+    <string name="title_dryout">Odvlhčovanie</string>
 
     <!--SENSORS-->
     <string name="time">Čas</string>
@@ -34,6 +35,16 @@
     <string name="Dryer">Odvlhčovač</string>
 
     <string name="Ventilation">Ventilácia</string>
+    <string name="Dryout">Odvlhčovanie</string>
+
+    <!--AUTOMATION-->
+    <string name="fan_on_time">Ventilátor ON</string>
+    <string name="fan_off_time">Ventilátor OFF</string>
+    <string name="fan_dew_threshold">Rozdiel rosného bodu</string>
+    <string name="fan_min_temp">Prevádzková teplota</string>
+
+    <string name="dryer_on_time">Odvlhčovač ON</string>
+    <string name="dryer_threshold">Prahová hodnota</string>
 
     <!--CODES-->
     <string name="relay_enabled">Zapnuté</string>
