Graph dynamic load & bunch of other changes
Fixed reloading of sensors after app wakeup from sleep

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
 
     <!-- OTHER -->
     <string name="degrees_centigrade" translatable="false">°C</string>
+    <string name="msg_token_fmt">Token ID: %s</string>
 </resources>
